src/objects/Loan_New__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_Discount__c</fullName>
        <label>Adjusted Discount Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advanced_Fee_disclosures__c</fullName>
        <label>Advanced Fee disclosures</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Name__c</fullName>
        <label>Alternate Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_Phone_number__c</fullName>
        <label>Alternate Contact Phone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alternate_Contact_full_address__c</fullName>
        <label>Alternate Contact full address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Of_Other_Funds__c</fullName>
        <label>Amount Of Other Funds</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Closing_Date__c</fullName>
        <label>Anticipated Closing Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Requested Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Signed_Date__c</fullName>
        <label>Application Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box for 'YES'</inlineHelpText>
        <label>Client Waived Appraisal Delivery Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Effective_Date__c</fullName>
        <label>Appraisal Effective Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Ordered_Date__c</fullName>
        <label>Appraisal Ordered Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Received_Date__c</fullName>
        <label>Appraisal Received Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Scheduled_Date__c</fullName>
        <label>Appraisal Scheduled Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_sent_to_Client_Date__c</fullName>
        <label>Appraisal sent to Client Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assets_Amount__c</fullName>
        <label>Assets Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Awaiting_Closing_Date__c</fullName>
        <label>Awaiting Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BayDocsOrderNumber__c</fullName>
        <label>BayDocsOrderNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokerCompensation__c</fullName>
        <label>Total Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrokerOrigination__c</fullName>
        <label>BrokerOrigination*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashAvaliabletoClient__c</fullName>
        <label>CashAvaliabletoClient*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Check_If_Title_is_also_Held_As__c</fullName>
        <label>Check If Title is also Held As Trust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Living Trust</fullName>
                </value>
                <value>
                    <fullName>Revocable Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Children_Under_the_age_of_6_living_in_th__c</fullName>
        <label>Children Under the age of 6 living in th</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_s_credit_score__c</fullName>
        <label>Client's credit score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cond_Approved_Days__c</fullName>
        <formula>TODAY() - Conditionally_Approved_Date__c</formula>
        <label>Cond Approved Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condominium_FHA_Approved__c</fullName>
        <label>Condominium FHA Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condominium_Name__c</fullName>
        <label>Condominium Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Credit_Reference_Number__c</fullName>
        <label>Confirm Credit Reference Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Closing_Date__c</fullName>
        <label>Contract Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cooling_Off_Notice_Signed_Date__c</fullName>
        <label>Cooling Off Notice Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Counseling_Date__c</fullName>
        <label>Counseling Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Counseling_Expiration_Date__c</fullName>
        <formula>Counseling_Date__c + 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counseling Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Indicator__c</fullName>
        <label>Credit Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pull New Credit</fullName>
                </value>
                <value>
                    <fullName>Reissue Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Reference_Number__c</fullName>
        <label>Credit Reference Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Report_Date__c</fullName>
        <label>Credit Report Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Report_type__c</fullName>
        <label>Credit Report type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_to_Borrower__c</fullName>
        <label>Credit to Borrower</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Assigend_PCS__c</fullName>
        <formula>PCS_at_Loan_Level__c =  $User.Id ||  Related_Partner__r.Assigned_PCS__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To check whether the PCS assigned is the current user, for giving a list view</inlineHelpText>
        <label>Current User is Assigned PCS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discounted_Value__c</fullName>
        <label>Discounted Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Driver_License_and_Social_Security_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Driver License and Social Security Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earnest_Money_Deposit__c</fullName>
        <label>Earnest Money Deposit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_of_Appraised_Value__c</fullName>
        <label>Estimate of Appraised Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extend_Application_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extend Application Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHA_Case_Number_Expiration__c</fullName>
        <formula>FHA_Case_Number_Date__c + 180</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FHA Case Number Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Goals_Call_Date__c</fullName>
        <label>Final Goals Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Goals_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Goals Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialAssessmentResult__c</fullName>
        <label>FinancialAssessmentResult*</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No LESA</fullName>
                </value>
                <value>
                    <fullName>Partial LESA</fullName>
                </value>
                <value>
                    <fullName>Full LESA</fullName>
                </value>
                <value>
                    <fullName>Borrower Elected LESA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flood_Ordered_Date__c</fullName>
        <label>Flood Ordered Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flood_Received_Date__c</fullName>
        <label>Flood Received Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FollowUp_Call_Date__c</fullName>
        <label>FollowUp Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FollowUp_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FollowUp Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Application_Received_Incomplete_Dat__c</fullName>
        <label>Full Application Received Incomplete Dat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Package_Received_Date__c</fullName>
        <label>Full Package Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fully_Signed_Application_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully Signed Application Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funded_Date__c</fullName>
        <label>Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FundtoClose__c</fullName>
        <label>FundtoClose*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Amount__c</fullName>
        <label>Gift Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Rental_Income__c</fullName>
        <label>Gross Rental Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Value__c</fullName>
        <label>Gross Value</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HECM_Counseling_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HECM Counseling Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA_Monthly_Dues__c</fullName>
        <label>HOA Monthly Dues</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_PUD_Condo_Fees__c</fullName>
        <label>Monthly HOA, PUD, Condo Fees</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOI_Effective_Date__c</fullName>
        <label>HOI Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Household_Members__c</fullName>
        <label>Household Members</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_Name_of_POA__c</fullName>
        <label>If yes, Name of POA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_and_Asset_Documentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Income and Asset Documentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incomplete_Date__c</fullName>
        <label>Incomplete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Call_Date__c</fullName>
        <label>Initial Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Binder_Ordered_Date__c</fullName>
        <label>Insurance Binder Ordered Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Binder_Received_Date__c</fullName>
        <label>Insurance Binder Received Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActiveFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAssetsFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAssetsFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClientFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClientFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCreditInfoFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCreditInfoFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeclarationFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeclarationFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmploymentFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEmploymentFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsIncomeFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field for income tab</description>
        <label>IsIncomeFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLaibilitiesFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLaibilitiesFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoanContactFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLoanContactFilled_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoanCreatedByLoanProcessor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLoanCreatedByLoanProcessor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoanDetailsFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLoanDetailsFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoanFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLoanFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOrderAppraisalFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOrderAppraisalFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubjectPropertyFilled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubjectPropertyFilled_Flag_ForTab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Application_Filled_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Application Filled Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CashFlow_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CashFlow Viewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Client_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check whether the client exists or not</description>
        <label>Is Client Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Loan_Created_Manually__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the loan is create from FNM or from Manual.</description>
        <label>Is Loan Created Manually?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_POA_Name_Representing_and__c</fullName>
        <label>Is there a POA? (Name, Representing and</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Description_of_Property__c</fullName>
        <label>Legal Description of Property</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lien_Balance__c</fullName>
        <label>Lien Balance*</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Expectancy__c</fullName>
        <label>Life Expectancy*</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineOfCreditAfterFirstYear__c</fullName>
        <label>LineOfCreditAfterFirstYear*</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoanCompleteFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LoanCompleteFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoanOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer*</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LoanOfficer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <description>This is created to redirect to Loan Record when we click on Loan Number</description>
        <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260)) &amp; Id, LoanNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Company_Identifier__c</fullName>
        <label>Loan Origination Company Identifier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Company_s_AddressNew__c</fullName>
        <formula>Related_Partner__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Origination Company’s Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Company_s_CityNew__c</fullName>
        <formula>Related_Partner__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Origination Company’s City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Company_s_NameNew__c</fullName>
        <formula>Related_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Origination Company’s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Company_s_StateNew__c</fullName>
        <formula>Related_Partner__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Origination Company’s State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Company_s_Zip_CodeNew__c</fullName>
        <formula>Related_Partner__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Origination Company’s Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Origination_Fee__c</fullName>
        <label>Loan Origination Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Originator_Identifier__c</fullName>
        <label>Loan Originator Identifier</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Originator_s_First_NameNew__c</fullName>
        <formula>Related_Individual__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Originator’s First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Originator_s_First_Name__c</fullName>
        <label>Loan Originator’s First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Originator_s_Last_NameNew__c</fullName>
        <formula>Related_Individual__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Originator’s Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Originator_s_Last_Name__c</fullName>
        <label>Loan Originator’s Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Originator_s_Phone_NumberNew__c</fullName>
        <formula>Related_Individual__r.Office_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Originator’s Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Payment_Plan_Term__c</fullName>
        <label>Loan_Payment_Plan_Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Processor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Portal Loan Processors</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Portal Loan Processor</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ORM Partner</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>ORM Partners</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Loan_Processor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.750</fullName>
                </value>
                <value>
                    <fullName>1.875</fullName>
                </value>
                <value>
                    <fullName>2.000</fullName>
                </value>
                <value>
                    <fullName>2.125</fullName>
                </value>
                <value>
                    <fullName>2.250</fullName>
                </value>
                <value>
                    <fullName>2.375</fullName>
                </value>
                <value>
                    <fullName>2.500</fullName>
                </value>
                <value>
                    <fullName>2.625</fullName>
                </value>
                <value>
                    <fullName>2.750</fullName>
                </value>
                <value>
                    <fullName>2.875</fullName>
                </value>
                <value>
                    <fullName>3.000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthlyPaymentavailabletoClient__c</fullName>
        <label>MonthlyPaymentavailabletoClient*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Flood_Insurance_Premium__c</fullName>
        <label>Monthly Flood Insurance Premium</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Ground_Rents_Amount__c</fullName>
        <label>Monthly Ground Rents Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Mortgage_Payment__c</fullName>
        <label>Monthly Mortgage Payment</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_PUD_Fees_Amount__c</fullName>
        <label>Monthly PUD Fees Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_and_Liens__c</fullName>
        <label>Mortgage and Liens</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Company__c</fullName>
        <label>Name of Company</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Rental_Income__c</fullName>
        <label>Net Rental Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Units__c</fullName>
        <label>No of Units</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORMS_AE__c</fullName>
        <formula>Related_Partner__r.Account_Executive_Name__r.FirstName + ' ' + Related_Partner__r.Account_Executive_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORMS AE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Loan_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Loan Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Closing_Costs_URL__c</fullName>
        <description>Title, Closing &amp; Recording Fees PDF</description>
        <inlineHelpText>Title, Closing &amp; Recording Fees PDF</inlineHelpText>
        <label>Other Closing Costs URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Other_Closing_Costs__c</fullName>
        <description>Other Closing Costs</description>
        <inlineHelpText>Title, Closing &amp; Recording Fees</inlineHelpText>
        <label>Other Closing Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_ReDisclosure_Reason__c</fullName>
        <inlineHelpText>This field gets cleared after saving the record. To view the details and reason, please go into the ReDisclosure History related list.</inlineHelpText>
        <label>Other ReDisclosure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Relationship_Alternative_Contact__c</fullName>
        <description>Relationship to Alternative Contact</description>
        <label>Other Relationship Alternative Contact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Source_Of_Funds__c</fullName>
        <label>Other Source Of Funds</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCS_at_Partner_Level__c</fullName>
        <formula>Related_Partner__r.Assigned_PCS__r.FirstName + ' ' +  Related_Partner__r.Assigned_PCS__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCS at Partner Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_any_fees_to_the_partner__c</fullName>
        <inlineHelpText>Paid any fees to the partner for any services, excluding third party services</inlineHelpText>
        <label>Paid any fees to the partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_State__c</fullName>
        <formula>Related_Partner__r.BillingState</formula>
        <label>Partner State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payoff_Expiration_Date__c</fullName>
        <label>Payoff Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payoff_Order_Date__c</fullName>
        <label>Payoff Order Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PipeLine_BestContactTime__c</fullName>
        <label>PipeLine_BestContactTime*</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>